--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crypto-portfolio-checker",
   "version": "1.0.0",
-  "description": "A CLI tool that return crypto portfolio value in USD which are logged in a CSV file",
+  "description": "A CLI tool that returns crypto portfolio value in USD which are logged in a CSV file",
   "main": "index.ts",
   "scripts": {
     "build": "tsc && chmod u+x ./bin/index.js"
@@ -14,12 +14,13 @@
   "devDependencies": {
     "@types/commander": "^2.12.2",
     "@types/node": "^17.0.25",
+    "@types/papaparse": "^5.3.2",
     "typescript": "^4.6.3"
   },
   "dependencies": {
     "commander": "^9.2.0",
     "csv-parse": "^5.0.4",
-    "csv-parser": "^3.0.0",
+    "dotenv": "^16.0.0",
     "papaparse": "^5.3.2"
   }
 }
