--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "commander": "^9.2.0",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
