--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "commander": "^9.2.0",
     "csv-parse": "^5.0.4",
     "dotenv": "^16.0.0",
+    "moment": "^2.29.3",
     "papaparse": "^5.3.2"
   }
 }
